# hypershadow

./: .gitignore  DATASET_CARD.md  LICENSE  README.md  pyproject.toml
article/: medium_draft.md
baselines/: diagrams.py  features.py  figure.py  id_estimators.py  pointnet.py  rigidity.py  tda.py
hypershadow/: __init__.py  corruptions.py  generate.py  primitives3d.py  primitivesnd.py  project.py  rotations.py  visualize.py
paper/: main.tex  paper.md
results/: features_results.json  id_estimator_results.json  id_seeds.json  pointnet_holdout_hypertorus_4d_hypertorus_5d_lite.pt  pointnet_holdout_hypertorus_4d_hypertorus_5d_results.json  pointnet_holdout_tesseract_4d_hypercube_5d_lite.pt  pointnet_holdout_tesseract_4d_hypercube_5d_results.json  pointnet_results.json  pointnet_seeds.json  rigidity_results.json  rigidity_seeds.json  tda_results.json
results/seeds/s0/: pointnet_lite.pt  pointnet_results.json
results/seeds/s1/: pointnet_lite.pt  pointnet_results.json
results/seeds/s2/: pointnet_lite.pt  pointnet_results.json
results/seeds/s3/: pointnet_lite.pt  pointnet_results.json
results/seeds/s4/: pointnet_lite.pt  pointnet_results.json
scripts/: id_variance.py  upload_hf.py
tests/: test_geometry.py
